# greetd-egui

./: Cargo.toml
src/: main.rs
